--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -43,16 +43,28 @@ jobs:
           
     - name: Verify Gradle wrapper
       run: |
+        echo "Checking android directory contents:"
         ls -la android/
+        echo "Checking gradle wrapper directory:"
         ls -la android/gradle/wrapper/
+        echo "Checking if gradlew exists and is executable:"
+        ls -la android/gradlew
         
     - name: Make gradlew executable
-      run: chmod +x android/gradlew
+      run: |
+        chmod +x android/gradlew
+        echo "Made gradlew executable"
+        ls -la android/gradlew
       
     - name: Build APK
       run: |
         cd android
+        echo "Current directory: $(pwd)"
+        echo "Contents of android directory:"
         ls -la
+        echo "Checking gradlew permissions:"
+        ls -la gradlew
+        echo "Running gradlew assembleRelease:"
         ./gradlew assembleRelease
         
     - name: Upload APK artifact
