--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -58,22 +58,19 @@ jobs:
         echo "Made gradlew executable"
         ls -la android/gradlew
         echo "Testing gradlew from root:"
-        cd android && ./gradlew --version
+        android/gradlew --version
       
     - name: Build APK
       run: |
         echo "Current directory: $(pwd)"
-        echo "Changing to android directory:"
-        cd android
-        echo "Current directory after cd: $(pwd)"
         echo "Contents of android directory:"
-        ls -la
+        ls -la android/
         echo "Checking gradlew permissions:"
-        ls -la gradlew
+        ls -la android/gradlew
         echo "Testing gradlew version:"
-        ./gradlew --version
+        android/gradlew --version
         echo "Running gradlew assembleRelease:"
-        ./gradlew assembleRelease
+        android/gradlew assembleRelease
         
     - name: Upload APK artifact
       uses: actions/upload-artifact@v4
