--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -37,6 +37,7 @@ jobs:
         path: |
           ~/.gradle/caches
           ~/.gradle/wrapper
+          ~/.android/build-cache
         key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
         restore-keys: |
           ${{ runner.os }}-gradle-
@@ -60,17 +61,26 @@ jobs:
         echo "Testing gradlew from root:"
         bash android/gradlew --version
       
+    - name: Display Gradle version
+      run: |
+        echo "Testing gradlew version:"
+        bash android/gradlew --version
+        
     - name: Build APK
+      env:
+        GRADLE_OPTS: -Xmx4096m -XX:MaxMetaspaceSize=512m
+        ANDROID_HOME: ${{ env.ANDROID_HOME }}
       run: |
         echo "Current directory: $(pwd)"
         echo "Contents of android directory:"
         ls -la android/
         echo "Checking gradlew permissions:"
         ls -la android/gradlew
-        echo "Testing gradlew version:"
-        bash android/gradlew --version
-        echo "Running gradlew assembleRelease:"
-        bash android/gradlew assembleRelease
+        echo "Environment variables:"
+        echo "GRADLE_OPTS: $GRADLE_OPTS"
+        echo "ANDROID_HOME: $ANDROID_HOME"
+        echo "Running gradlew assembleRelease with verbose logging:"
+        bash android/gradlew assembleRelease --stacktrace --info
         
     - name: Upload APK artifact
       uses: actions/upload-artifact@v4
