--- a/app.json
+++ b/app.json
@@ -16,6 +16,8 @@
             "supportsTablet": true
         },
         "android": {
+            "package": "com.cryptobitwise.shopsmart",
+            "permissions": [],
             "adaptiveIcon": {
                 "backgroundColor": "#3B82F6"
             }
