--- a/package.json
+++ b/package.json
@@ -1,28 +1,28 @@
 {
-    "name": "shopsmart-mobile",
-    "version": "1.0.0",
-    "description": "ShopSmart - Smart shopping made simple",
-    "main": "index.js",
-    "scripts": {
-        "start": "expo start",
-        "android": "expo start --android",
-        "ios": "expo start --ios",
-        "web": "expo start --web"
-    },
-    "dependencies": {
-        "@expo/vector-icons": "^13.0.0",
-        "@react-native-async-storage/async-storage": "1.18.2",
-        "expo": "~49.0.0",
-        "expo-haptics": "~12.4.0",
-        "expo-sharing": "~11.5.0",
-        "expo-status-bar": "~1.6.0",
-        "react": "18.2.0",
-        "react-native": "0.72.6"
-    },
-    "devDependencies": {
-        "@babel/core": "^7.20.0",
-        "@types/react": "^18.2.14",
-        "typescript": "^5.1.3"
-    },
-    "private": true
+  "name": "shopsmart-mobile",
+  "version": "1.0.0",
+  "description": "ShopSmart - Smart shopping made simple",
+  "main": "index.js",
+  "scripts": {
+    "start": "expo start",
+    "android": "expo start --android",
+    "ios": "expo start --ios",
+    "web": "expo start --web"
+  },
+  "dependencies": {
+    "@expo/vector-icons": "^13.0.0",
+    "@react-native-async-storage/async-storage": "1.18.2",
+    "expo": "~49.0.0",
+    "expo-haptics": "~12.4.0",
+    "expo-sharing": "~11.5.0",
+    "expo-status-bar": "~1.6.0",
+    "react": "18.2.0",
+    "react-native": "0.72.10"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.20.0",
+    "@types/react": "~18.2.14",
+    "typescript": "^5.1.3"
+  },
+  "private": true
 }
